src/objects/Amendment__c.object
<CustomObject>
    <description>Amendments offered to a particular piece of legislation</description>
    <fields>
        <fullName>Amendment_ID__c</fullName>
        <description>Unique identifier for this Amendment, should be identical to the Amendment Name</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique identifier for this Amendment, should be identical to the Amendment Name</inlineHelpText>
        <label>Amendment ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Bill_ID__c</fullName>
        <description>ID of the associated Bill, used to join the two objects together</description>
        <inlineHelpText>ID of the associated Bill, used to join the two objects together</inlineHelpText>
        <label>Bill ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chamber__c</fullName>
        <description>The chamber the amendment was offered in. Either &quot;house&quot; or &quot;senate&quot;.</description>
        <inlineHelpText>The chamber the amendment was offered in. Either &quot;house&quot; or &quot;senate&quot;.</inlineHelpText>
        <label>Chamber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Official description of the amendment.</description>
        <inlineHelpText>Official description of the amendment.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Action_At__c</fullName>
        <description>The time of the last action to happen</description>
        <inlineHelpText>The time of the last action to happen</inlineHelpText>
        <label>Last Action At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legislation__c</fullName>
        <description>Legislation for which this amendment is offered</description>
        <inlineHelpText>Legislation for which this amendment is offered</inlineHelpText>
        <label>Legislation</label>
        <referenceTo>Legislation__c</referenceTo>
        <relationshipLabel>Amendments</relationshipLabel>
        <relationshipName>Amendments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <description>The amendment&apos;s official number.</description>
        <inlineHelpText>The amendment&apos;s official number.</inlineHelpText>
        <label>Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offered_At__c</fullName>
        <description>Time the amendment was offered.</description>
        <inlineHelpText>Time the amendment was offered.</inlineHelpText>
        <label>Offered At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <description>The session of Congress this amendment was offered during.</description>
        <inlineHelpText>The session of Congress this amendment was offered during.</inlineHelpText>
        <label>Session</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Information__c</fullName>
        <description>Basic information about either the legislator or the committee that is sponsoring the amendment</description>
        <inlineHelpText>Basic information about either the legislator or the committee that is sponsoring the amendment</inlineHelpText>
        <label>Sponsor Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sponsor_Type__c</fullName>
        <description>The type of sponsor of the amendment. Can be either &quot;committee&quot; or &quot;legislator&quot;.</description>
        <inlineHelpText>The type of sponsor of the amendment. Can be either &quot;committee&quot; or &quot;legislator&quot;.</inlineHelpText>
        <label>Sponsor Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The current state of the amendment. One of &quot;fail&quot;, &quot;offered&quot;, &quot;pass&quot;, or &quot;withdrawn&quot;.</description>
        <inlineHelpText>The current state of the amendment. One of &quot;fail&quot;, &quot;offered&quot;, &quot;pass&quot;, or &quot;withdrawn&quot;.</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Amendment</label>
    <nameField>
        <label>Amendment ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amendments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>